# docs-toolkit

./: .gitignore  README.md  pyproject.toml
scripts/: runner.py
src/corpus/: __init__.py
src/corpus/cli/: main.py
src/corpus/core/: loader.py
src/docs_toolkit/: __init__.py
src/docs_toolkit/core/: document.py  loader.py
src/docs_toolkit/plugins/: base.py
src/docs_toolkit/plugins/builtin/: __init__.py  uppercase.py
tests/: test_document.py  test_loader.py  test_plugin_base.py  test_uppercase_plugin.py
